--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
           args:
             - DB_HOST=mongodb://mongo:27017
             - COLLECTION=articles
-            - DB_NAME=healx-challenge
+            - DB_NAME=articles-challenge
         links:
             - mongo
 
